--- a/JsonFixer.csproj
+++ b/JsonFixer.csproj
@@ -76,8 +76,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionClipboard.cs" />
+    <Compile Include="ConsolLog.cs" />
+    <Compile Include="Duplicates.cs" />
+    <Compile Include="ExternalDll.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AutoFix.cs" />
+    <Compile Include="ContextMenu.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
