--- a/JsonFixer.csproj
+++ b/JsonFixer.csproj
@@ -80,10 +80,12 @@
     <Compile Include="ConsolLog.cs" />
     <Compile Include="Duplicates.cs" />
     <Compile Include="ExternalDll.cs" />
+    <Compile Include="JsonTools.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AutoFix.cs" />
     <Compile Include="ContextMenu.cs" />
+    <Compile Include="Write2Log.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
